clusters/trial/project-plato/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project-plato
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: busybox:1.32.0
        command: ['sh', '-c', 'tail -f /dev/null']
        imagePullPolicy: IfNotPresent
        name: busybox
        #
        securityContext:
          readOnlyRootFilesystem: true
        #
        volumeMounts:
        - name: tmp-volume
          mountPath: /tmp
        livenessProbe:
          exec:
            command: ["/bin/sh", "-c", "true"]
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - nc -zv db1-service 6379
          initialDelaySeconds: 5
          periodSeconds: 10
      restartPolicy: Always
      volumes:
      - name: tmp-volume
        emptyDir: {}
