clusters/trial/project-plato/db1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project-plato
  name: db1
  labels:
    app: db1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db1
  template:
    metadata:
      labels:
        app: db1
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: db1-service
  namespace: project-plato
spec:
  selector:
    app: db1
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 80
  type: ClusterIP
