clusters/trial/project-plato/db2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project-plato
  name: db2
  labels:
    app: db2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db2
  template:
    metadata:
      labels:
        app: db2
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: db2-service
  namespace: project-plato
spec:
  selector:
    app: db2
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 80
  type: ClusterIP
